set header z-index, fix main-page link

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -15,6 +15,7 @@
   justify-content: space-between;
   margin: 0;
   padding: 0;
+  z-index: 1000;
 }
 
 /* LEFT PART CSS STYLE */
